syntax = "proto3";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "WindSpeedProto";

message WindSpeedProto {
  int32 currentWindSpeed = 1;
  int32 windSpeedDiff = 2;
  int32 imgIdChangeWindSpeed = 3;
}
